<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home2"
            android:title="@string/home"
            android:icon="@drawable/home_icon"/>

        <item android:id="@+id/nav_all_previous_questions"
            android:title="@string/prev_questions"
            android:icon="@drawable/prev_question"/>

        <item android:id="@+id/nav_previous_job"
            android:title="@string/previous_Job"
            android:icon="@drawable/history_icon"/>

        <item android:id="@+id/nav_accepted_job"
            android:title="@string/accepted_job"
            android:icon="@drawable/ic_baseline_work_24"/>

        <item android:id="@+id/all_shops"
            android:title="@string/all_shops"
            android:icon="@drawable/add_shopping" />


        <item android:id="@+id/nav_chat"
            android:title="@string/chat"
            android:icon="@drawable/chat_icon"/>

        <item android:id="@+id/nav_profile"
            android:title="@string/profile"
            android:icon="@drawable/person_icon"/>

        <item android:id="@+id/nav_worker_settings"
            android:title="@string/settings"
            android:icon="@drawable/setting_icon"/>

        <item android:id="@+id/nav_logout"
            android:title="@string/logout"
            android:icon="@drawable/log_icon"/>



    </group>

</menu>