<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/home_icon"/>

        <item android:id="@+id/nav_requested"
            android:title="@string/requested"
            android:icon="@drawable/requested_button"/>

        <item android:id="@+id/nav_selected_worker"
            android:title="@string/selected_worker"
            android:icon="@drawable/person_icon"/>

        <item android:id="@+id/nav_previous_requested"
            android:title="@string/previous"
            android:icon="@drawable/history_icon"/>


        <item android:id="@+id/nav_all_previous_questions"
            android:title="@string/my_previous_question"
            android:icon="@drawable/pre_questions_icon"/>


        <item android:id="@+id/all_shops"
            android:title="@string/all_shops"
            android:icon="@drawable/add_shopping" />



        <item android:id="@+id/nav_client_settings"
            android:title="@string/settings"
            android:icon="@drawable/setting_icon"/>

        <item android:id="@+id/nav_logout"
            android:title="@string/logout"
            android:icon="@drawable/log_icon"/>



    </group>

</menu>